--- a/SeSAC_StudyMatchingApp/Resource/Base.lproj/LaunchScreen.storyboard
+++ b/SeSAC_StudyMatchingApp/Resource/Base.lproj/LaunchScreen.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -15,28 +16,8 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash_logo" translatesAutoresizingMaskIntoConstraints="NO" id="nyw-QV-fqL">
-                                <rect key="frame" x="82" y="215.33333333333337" width="226" height="287"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="txt" translatesAutoresizingMaskIntoConstraints="NO" id="CBk-mZ-gJX">
-                                <rect key="frame" x="43" y="537.33333333333337" width="304" height="101.33333333333337"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="CBk-mZ-gJX" secondAttribute="height" multiplier="3:1" id="LT5-E8-chE"/>
-                                </constraints>
-                            </imageView>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="CBk-mZ-gJX" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.78" id="8nh-eq-weQ"/>
-                            <constraint firstItem="CBk-mZ-gJX" firstAttribute="top" secondItem="nyw-QV-fqL" secondAttribute="bottom" constant="35" id="CbZ-Tl-fsb"/>
-                            <constraint firstItem="nyw-QV-fqL" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" multiplier="0.85" id="GiN-mt-r1r"/>
-                            <constraint firstItem="nyw-QV-fqL" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Lcp-u4-blV"/>
-                            <constraint firstItem="CBk-mZ-gJX" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="c2A-0t-LUl"/>
-                            <constraint firstItem="nyw-QV-fqL" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" multiplier="0.34" id="dPa-1U-HxI"/>
-                            <constraint firstItem="nyw-QV-fqL" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.58" id="xQe-qP-tbG"/>
-                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -45,8 +26,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="splash_logo" width="220" height="264"/>
-        <image name="txt" width="328" height="112"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
